--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,3 +14,20 @@ b{
     color: rgb(65, 85, 46);
     background-color: cornsilk;
 }
+a{
+    font-size: 50px;
+    text-decoration: none;
+    background-color: cornsilk;
+}
+a:visited{
+    color: rgb(255, 115, 0);
+    background-color: rgb(0, 255, 128);
+}
+a:hover{
+    color: rgba(7, 187, 187, 0.568);
+    background-color: rgb(255, 243, 81);
+}
+a:active{
+    color: darkred;
+    background-color: mediumblue;
+}
